Fixed projects dropdown menu alignment

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,10 @@ body {
   margin-right: 5em;
 }
 
+.projects-menu {
+  margin-right: 3.5em;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
 }
